@@ -1,5 +1,10 @@
 2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCClospre.hpp:
+	  Fix invalid memory access bug.
+
+2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCClospre.hpp,
 	  src/z80/gen.c:
 	  Fix handling of ADDRESS_OF in lospre forward assignment.
